gtpb_clientside/resources/edit_nav/edit_nav.css
/* override tabs.css */
body {
  overflow: visible ;
  background-color: #dbdbdb; /* 777788, bdbdbd */
}

#you_are_here {
  text-shadow: none;
}

.reportDataView .block {
  margin: 2em;
  float: left;
  width: 250px;
  height: 150px;
  overflow: hidden;
  color: black;
  /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
}

.reportDataView .block.current {
  background: white;
}

.reportDataView .block .new {
  font-size: 14pt;
}

.reportDataView .block .new img {
  vertical-align: middle;
}

.reportDataView .block.centrebox {
   /* flexbox, por favor */
  display: -webkit-box;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
  -webkit-box-align: center;
 
  display: -moz-box;
  -moz-box-orient: horizontal;
  -moz-box-pack: center;
  -moz-box-align: center;
  
  display: box;
  box-orient: horizontal;
  box-pack: center;
  box-align: center;
  
  overflow: visible; /* necessary for FF */
  float: none;
}

.reportDataView .block:hover {
  cursor: pointer;
  border-color: #50add6; /* ab light blue */
}

.slide.reportDataView .related {
  box-shadow: none;
  text-shadow: none;
  border: 1px solid #eeeeee;
  margin: 1.8em; /* fit three blocks to a slide */
}

.slide.reportDataView .related:hover {
  border-color: #50add6; /* ab light blue */
}

.slide .title {
  text-align: center;
  /* font-weight: bold; */
  font-size: 14pt;
  text-shadow: none;
  margin: 1em;
}

#search {
  margin-left: 2em;
  margin-top: 0.5em;
  color: white;
  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  font-size: 13pt;
}

#search input {
  width: 30em;
  color: black;
  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  -moz-border-radius: 2em;
  /* no webkit border radius, webkit styles input type=search anyway */
}

#breadcrumb {
  background-color: white;
  padding: 0.5em;
  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  color: gray;
}

#breadcrumb .currentLevel {
  color: black;
}

#breadcrumb a {
  color: #486f98;
}

#levels {
  position: relative;
  background-color: #bdbdbd;
}

.level {
  position: absolute;
  top: 0px;
  -moz-transition: all 0.5s ease-in;
  -webkit-transition: all 0.5s ease-in;
  -ms-transition: all 0.5s ease-in;
  transition: all 0.5s ease-in;
  width: 100%;
  height: 610px;
  overflow: visible;
}

.flyUp {
  top: -100px;
  /* height: 0px; */
}

.flyDown {
  top: 100px;
  /* height: 0px; */
}

.breadcrumb_title {
  display: none;
}

.transparent {
  opacity: 0;
}

.invisible {
  display: none;
}

.slide table#reportData tr.rowb {
  background-image: none;
}

.slide table#reportData td.capitalised {
  text-align: right;
  width: auto;
}

.slide table#reportData tr.separator td.capitalised {
  text-align: left;
}

.slide .separator .fieldname {
  margin-left: 0px;
  background: none;
  position: relative;
  top: 0.5em;
  text-shadow: none;
}

.slide .separator span {
  background: none;
}

.slide table#reportData th {
  background: white;
  border: 0;
  text-shadow: none;
  font-weight: normal;
  font-size: 14pt;
  padding-top: 1em;
}

.this_table {
  width: 70%;
  float: left;
}

.dependent_tables {
  width: 30%;
  float: right;
  padding-left: 1em;
  text-shadow: none;
}

